# IGL

./: CMakeLists.txt
include/IGL/: Config.h  Graphics.h  IGL.h  Math.h  System.h  Window.h  igl_compile_includes.h  igl_typedefs.h
include/IGL/Config/: Compile.h  Debug.h  Includes.h  Macros.h  Typedefs.h
include/IGL/Graphics/: Color.h  Graphics2D.h  Graphics3D.h  Mesh.h  RenderTarget.h  Shader.h
include/IGL/Graphics/2D/: RenderTexture.h  Texture.h
include/IGL/Graphics/LowLevel/: Mesh.h  PrimitiveType.h  Shader.h
include/IGL/Math/: Math.h
include/IGL/System/Clock/: Clock.h
include/IGL/System/Exceptions/: MessageException.h
include/IGL/System/ScopeGuard/: ScopeGuard.h
include/IGL/System/Throwable/: Throwable.h
include/IGL/System/Throwable/Error/: Error.h  ErrorWithMessage.h  ErrorWithStackTrace.h  RuntimeError.h
include/IGL/System/Throwable/Exception/: Exception.h  ExceptionWithMessage.h  ExceptionWithStackTrace.h  IllegalArgumentException.h
include/IGL/System/Util/Files/: Files.h
include/IGL/System/Util/Types/: Types.h
include/IGL/Window/: Window.h
include/IGL/Window/Events/: Event.h  Events.h
include/IGL/Window/View/: View.h
src/IGL/Graphics/: Color.cpp  Mesh.cpp  Shader.cpp
src/IGL/Graphics/2D/: RenderTexture.cpp  Texture.cpp
src/IGL/System/Clock/: Clock.cpp
src/IGL/System/Exceptions/: MessageException.cpp
src/IGL/System/ScopeGuard/: ScopeGuard.cpp
src/IGL/System/Throwable/: Throwable.cpp
src/IGL/System/Throwable/Error/: ErrorWithMessage.cpp  ErrorWithStackTrace.cpp  RuntimeError.cpp
src/IGL/System/Throwable/Exception/: ExceptionWithMessage.cpp  ExceptionWithStackTrace.cpp  IllegalArgumentException.cpp
src/IGL/System/Util/Files/: Files.cpp
src/IGL/System/Util/Types/: Types.cpp
src/IGL/Window/: Window.cpp
src/IGL/Window/Events/: Events.cpp
test/IGL/: main.cpp  test.cpp
